# nidus

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-DATASET  PROGRESS.md  README.md  RELEASE.md  index.html  mkdocs.yml  objects.inv  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  hypothesis-proposal.yml  parameter-request.yml
.github/workflows/: ci.yml  citations.yml  docs.yml  release.yml
about/design/: index.html
about/essay/: index.html
about/history/: index.html
about/license/: index.html
api/: index.html
contributing/overview/: index.html
contributing/tier-assignment/: index.html
contributing/verification/: index.html
crates/nidus-cli/: Cargo.toml
crates/nidus-cli/src/: main.rs
crates/nidus-core/: Cargo.toml
crates/nidus-core/src/: citation.rs  clock.rs  dispatcher.rs  lib.rs  rng.rs  snapshot.rs  subscriber.rs  tier.rs  tiered.rs
crates/nidus-core/src/numerics/: fixed.rs  mod.rs  quantities.rs
crates/nidus-data/: Cargo.toml
crates/nidus-data/src/: database.rs  lib.rs  schema.rs
crates/nidus-data/tests/: load_repo_data.rs
crates/nidus-fetal/: Cargo.toml
crates/nidus-fetal/src/: lib.rs  special_circulation.rs  subscriber.rs
crates/nidus-hypothesis/: Cargo.toml
crates/nidus-hypothesis/examples/: sensitivity_placental_gas_exchange.rs
crates/nidus-hypothesis/src/: divergence.rs  ensemble.rs  experiment_design.rs  lib.rs  sensitivity.rs
crates/nidus-maternal/: Cargo.toml
crates/nidus-maternal/src/: cardio.rs  lib.rs
crates/nidus-observability/: Cargo.toml
crates/nidus-observability/src/: export.rs  lib.rs  telemetry.rs
crates/nidus-placenta/: Cargo.toml
crates/nidus-placenta/src/: lib.rs  structure.rs  subscriber.rs  transport.rs
crates/nidus-py/: Cargo.toml
crates/nidus-py/src/: lib.rs
crates/nidus-scenarios/: Cargo.toml
crates/nidus-scenarios/src/: builtin.rs  lib.rs  orchestrator.rs  spec.rs
crates/nidus-scenarios/tests/: database_constructors.rs
crates/nidus-unknown/: Cargo.toml
crates/nidus-unknown/src/: lib.rs  registry.rs
crates/nidus-validation/: Cargo.toml
crates/nidus-validation/src/: builtin.rs  lib.rs  report.rs  suite.rs
crates/nidus-validation/src/datasets/: maternal_hemodynamics.rs  mod.rs
crates/nidus-validation/tests/: datasets.rs  maternal_cardio.rs
dashboard/: app.py  requirements.txt  utils.py
dashboard/pages/: 01_Parameter_Explorer.py  02_Subsystem_Deep_Dive.py  03_Citation_Provenance.py  04_Unknowns_Registry.py  05_Download.py  06_Trajectory_Viewer.py  07_Sensitivity_Sandbox.py
data/: README.md
data/citations/: README.md  index.toml
data/validation/: README.md  REVIEW_QUEUE.md  machine_checks.json  maternal_hemodynamics.toml
dataset/: CHANGELOG.md  DATASET.md
dataset/citations/: .gitkeep  citations.json
dataset/jsonld/: context.jsonld
dataset/overview/: index.html
dataset/parameters/: .gitkeep  amniotic_fluid.json  fetal_circulation.json  fetal_growth.json  fetal_metabolism.json  maternal_blood.json  maternal_cardiovascular.json  maternal_endocrine.json  maternal_renal.json  maternal_respiratory.json  placental_endocrine.json  placental_gas_exchange.json  placental_glucose.json  placental_structure.json
dataset/schema/: citation.schema.json  index.html  parameter.schema.json  tier.schema.json
dataset/subsystems/: index.html
dataset/tiers/: index.html  tiers.json
dataset/verified-examples/: index.html
docs/: README.md  api.md  index.md
docs/about/: design.md  essay.md  history.md  license.md
docs/architecture/: overview.md
docs/contributing/: overview.md  parameter-pull-requests.md  tier-assignment.md  verification.md
docs/dataset/: overview.md  schema.md  subsystems.md  tiers.md  verified-examples.md
docs/exports/: annotations.md  cellml.md  index.md  physicell.md  sbml.md
docs/getting-started/: install.md  quickstart.md
docs/specs/: 01-parameter-database.md  02-subsystem-completion.md  03-validation-suite.md  04-python-bindings.md  05-dashboard.md  06-cli-and-reproducibility.md  07-examples-and-tutorials.md  08-distribution.md  09-testing-and-ci.md  10-population-modeling.md  11-hypothesis-generalization.md  12-code-hygiene.md  README.md  SPEC.md  SPEC_V0.2.md
docs/specs/v0.3/: 00-overview.md  (+4 more)
docs/tutorials/: README.md  contributing_parameter.md  hypothesis_workflow.md  index.md  unknown_channels.md
docs/validation/: case-maternal-cardiac-output.md  extending.md  overview.md  report-schema.md
examples/physicell_placental_villous/: PhysiCell_settings.xml  index.html
exports/: index.html
exports/annotations/: index.html
exports/cellml/: index.html
exports/physicell/: index.html
exports/sbml/: index.html
getting-started/install/: index.html
getting-started/quickstart/: index.html
notebooks/: .gitkeep  01_parameter_explorer.ipynb  02_tier_walkthrough.ipynb  03_uncertainty_propagation.ipynb  04_citation_provenance.ipynb  essay_figures.ipynb
notebooks/01_parameter_explorer/: index.html
notebooks/02_tier_walkthrough/: index.html
notebooks/03_uncertainty_propagation/: index.html
python/: conftest.py  pyproject.toml
python/nidus/: __init__.py  cli.py  load.py  models.py  validate.py
python/nidus/export/: __init__.py  annotate.py  cellml.py  combine.py  composed.py  equations.py  evaluate.py  physiocell.py  reference.py  registry.py  sbml.py  sedml.py  sweep.py
python/tests/: .gitkeep  conftest.py  test_citations.py  test_cli.py  test_dashboard_smoke.py  test_evaluate.py  test_export.py  test_filter.py  test_load.py  test_validate.py
scenarios/: mild_preeclampsia.toml  normal_term_pregnancy.toml  placental_insufficiency.toml
scripts/: build_notebooks.py  build_review_queue.py  check_citation_reachability.py  expand_v04.py  fetch_sources.py  migrate_data.py  mkdocs_hooks.py  preverify_context.py  promote_pending_review.py  repair_citation_identifiers.py  sync_dataset_into_package.py  verify_citation_metadata.py
search/: search_index.json
specs/: index.html
tutorials/: index.html
(+36 files in other folders)
