[project]
name = "nidus"
version = "0.3.0.dev0"
description = "Curated dataset of human gestational physiology parameters with confidence-tier annotations"
readme = "../README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Clay Good"}]
keywords = [
    "pregnancy",
    "gestational physiology",
    "maternal-fetal medicine",
    "placenta",
    "physiological modeling",
    "open dataset",
    "confidence tiers",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "pydantic>=2.0",
    "jsonschema>=4.0",
    "numpy>=1.24",
    "requests>=2.28",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "mypy>=1.5",
    "ruff>=0.1",
    "nbmake>=1.4",
]

[project.urls]
Homepage = "https://github.com/claygood/nidus"
Repository = "https://github.com/claygood/nidus"
Issues = "https://github.com/claygood/nidus/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nidus"]

[tool.hatch.build.targets.wheel.force-include]
"../dataset" = "nidus/_dataset"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
