[project]
name = "nidus"
version = "0.3.0.dev0"
description = "Curated dataset of human gestational physiology parameters with confidence-tier annotations"
readme = "../README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Clay Good"}]
keywords = [
    "pregnancy",
    "gestational physiology",
    "maternal-fetal medicine",
    "placenta",
    "physiological modeling",
    "open dataset",
    "confidence tiers",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "jsonschema>=4.0",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "mypy>=1.5",
    "ruff>=0.1",
    "nbmake>=1.4",
    "types-jsonschema",
    "build>=1.0",
    # Dashboard deps (kept here so a single `pip install -e .[dev]` gives
    # the maintainer everything; the dashboard's own runtime requirements
    # live in dashboard/requirements.txt for Streamlit Community Cloud).
    "streamlit>=1.28",
    "pandas>=2.0",
    # Notebook execution + plotting (the reference notebooks in
    # notebooks/ exercise the API and double as tutorials).
    "matplotlib>=3.7",
    "nbmake>=1.4",
    "jupyter-client>=8",
    "ipykernel>=6",
    # Documentation site (mkdocs-material + plugins).
    "mkdocs>=1.5",
    "mkdocs-material>=9.4",
    "mkdocs-jupyter>=0.24",
    "mkdocstrings[python]>=0.24",
]

[project.scripts]
nidus = "nidus.cli:main"

[project.urls]
Homepage = "https://github.com/claygood/nidus"
Repository = "https://github.com/claygood/nidus"
Issues = "https://github.com/claygood/nidus/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nidus"]

# Dataset bundling: the dataset lives at ../dataset/ in the repo, but
# Python build tooling (hatchling, build --sdist) can't reliably pull
# files from outside the project root. A small pre-build script
# (scripts/sync_dataset_into_package.py) copies ../dataset/ into
# python/nidus/_dataset/ before `python -m build` runs. The copy is
# gitignored so it isn't tracked. The loader looks for it at runtime.

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
