[package]
name = "nidus-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for the Nidus research simulator."

[[bin]]
name = "nidus"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
nidus-core.workspace = true
nidus-data.workspace = true
nidus-scenarios.workspace = true
nidus-unknown.workspace = true
clap.workspace = true
serde_json.workspace = true
