[package]
name = "nidus-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic simulation engine, tick hierarchy, and confidence-tier infrastructure for Nidus."

[lints]
workspace = true

[dependencies]
rand_chacha.workspace = true
rand_core.workspace = true
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]
