[package]
name = "nidus-data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Parameter database access and citation index."

[lints]
workspace = true

[dependencies]
nidus-core = { workspace = true, features = ["serde"] }
serde = { workspace = true }
toml.workspace = true
thiserror.workspace = true
