[package]
name = "nidus-fetal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Fetal subsystem: cardiovascular special circulation, metabolism, organ maturation, and neurodevelopment."

[lints]
workspace = true

[dependencies]
nidus-core.workspace = true
