[package]
name = "nidus-hypothesis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Hypothesis generation layer: ensemble runs, sensitivity analysis, experiment design suggestion."

[lints]
workspace = true

[dependencies]
nidus-core.workspace = true
