[package]
name = "nidus-maternal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Maternal subsystem: cardiovascular, metabolic, endocrine, and immune adaptation across pregnancy."

[lints]
workspace = true

[dependencies]
nidus-core.workspace = true
