[package]
name = "nidus-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Telemetry bus, confidence-tier tracking, and data export for Nidus."

[lints]
workspace = true

[dependencies]
nidus-core = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
