[package]
name = "nidus-placenta"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Placental interface: transport, structural development, endocrine production, barrier function, and unknown channels."

[lints]
workspace = true

[dependencies]
nidus-core.workspace = true
nidus-data.workspace = true
