[package]
name = "nidus-unknown"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Registry of Tier C and Tier D unknown channels as first-class simulation entities."

[lints]
workspace = true

[dependencies]
nidus-core.workspace = true
